bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: identifier expected but string literal found.
  if (litMessage():"R")
                   ^BDR:6: error: ')' expected but '}' found.
  } else if (litMessage():"L"){
  ^BDR:6: error: ';' expected but 'else' found.
  } else if (litMessage():"L"){
    ^BDR:33: error: Unmatched closing brace '}' ignored here
	}
        ^